tests/negative/08_missing_return.nova
// EXPECT-ERROR: "return"
fn no_return() -> i32 {
    let x: i32 = 42;
    // error: missing return
}
fn main() -> i32 {
    return 0;
}
